--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# IDE
 .idea/
 
-/wp-content/themes/dissidentbooster/node_modules/node_modules
+# dependencies
+/wp-content/themes/dissidentbooster/node_modules/
+
+# misc
+.DS_Store
