--- a/wp-content/themes/dissidentbooster/config.yml
+++ b/wp-content/themes/dissidentbooster/config.yml
@@ -21,6 +21,7 @@ PATHS:
     - "**/*.php"
     - "!node_modules/**"
     - "!.git/**"
+  js:  "src/js/**/*.js"
   css: "src/css/**/*.css"
   img: "src/img/raw/*.{png,jpg,gif,svg}"
 
