--- a/wp-content/themes/dissidentbooster/package.json
+++ b/wp-content/themes/dissidentbooster/package.json
@@ -6,7 +6,7 @@
   "description": "Development Environment for Dissident Wordpress",
   "scripts": {
     "dev": "gulp --dev",
-    "build": "gulp build --production"
+    "build": "gulp --production"
   },
   "dependencies": {
     "jquery": "^3.2.1"
@@ -24,7 +24,6 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-sequence": "^1.0.0",
     "gulp-uglify": "^3.0.1",
     "gulp-uglifycss": "^1.1.0",
     "js-yaml": "^3.12.0",
