--- a/wp-content/themes/dissidentbooster/package.json
+++ b/wp-content/themes/dissidentbooster/package.json
@@ -9,7 +9,10 @@
     "build": "gulp --production"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.2.1",
+    "materialize-css": "^1.0.0",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -24,6 +27,8 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
     "gulp-uglifycss": "^1.1.0",
     "js-yaml": "^3.12.0",
