--- a/example.com/.env.sample
+++ b/example.com/.env.sample
@@ -1,18 +1,13 @@
 # Wordpress variables (only if you want to add dev server to your theme)
-WORDPRESS_THEME_NAME=
+WORDPRESS_THEME_NAME=your_theme_name
 
 
 # Wordpress/SQL variables
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-
-# SQL/phpMyAdmin variables
-DB_USERNAME=
-DB_ROOT_PASSWORD=
+DB_USER=root
+DB_PASSWORD=same_as_db_container
 
 
 # SSL/TLS
-VIRTUAL_HOST=
-VIRTUAL_PORT=
-LETSENCRYPT_EMAIL=
+VIRTUAL_HOST=your_vhost
+VIRTUAL_PORT=80
+LETSENCRYPT_EMAIL=email_for_ssl
