Volume paths on Windows:solved

--- a/nginx-sql/.env.sample
+++ b/nginx-sql/.env.sample
@@ -1,7 +1,10 @@
+# CHANGE TO "1" FOR WINDOWS PATH FIX
+COMPOSE_CONVERT_WINDOWS_PATHS=0
+
 # SQL/phpMyAdmin variables
 DB_ROOT_PASSWORD=a_strong_password
 
 
 # VHOST
-VIRTUAL_HOST=phpmyadmin.sql
+VIRTUAL_HOST=phpmyadmin.sql, www.phpmyadmin.sql
 VIRTUAL_PORT=80
