--- a/example.com/docker-compose.yml
+++ b/example.com/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     expose:
       - ${VIRTUAL_PORT}
     volumes:
-      - ./themes:/var/www/html/wp-content/themes
-      - ./plugins:/var/www/html/wp-content/plugins
-      - ./uploads:/var/www/html/wp-content/uploads
+      - ./wp-content/themes:/var/www/html/wp-content/themes
+      - ./wp-content/plugins:/var/www/html/wp-content/plugins
+      - ./wp-content/uploads:/var/www/html/wp-content/uploads
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
       - ./logs/apache/:/var/log/apache2/
     environment:
@@ -34,10 +34,10 @@ services:
     expose:
       - ${VIRTUAL_PORT}
     volumes:
-      - ./themes/my-theme:/var/www/html/wp-content/themes/my-theme
+      - ./wp-content:/var/www/html/wp-content/
       - ./logs/node:/root/.npm/_logs
-    working_dir: /var/www/html/wp-content/themes/my-theme
-    command: bash -c "npm install && npm run dev"
+    working_dir: /var/www/html/wp-content/
+    command: bash -c "npm install && npm rebuild node-sass && npm run dev"
     environment:
       VIRTUAL_HOST: ${VIRTUAL_HOST_DEV}
       BROWSERSYNC_PROXY: ${BROWSERSYNC_PROXY}
